[package]
name = "threshold-dict"
description = "A data structure to find smallest key that is larger than the query"
keywords = ["datastructures"]
categories = ["data-structures"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lucidfrontier45/threshold_dict"
version = "0.7.0"
edition = "2021"
authors = ["Du Shiqiao <lucidfrontier.45@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
